[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yeetcode"
version = "0.0.1"
authors = [
  { name="Qianxy", email="xyqian67@gmail.com" },
]
description = "Leetcode skeletal clone"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  'PyYAML ~= 6.0',
  'black ~= 22.10.0',
]

[project.optional-dependencies]
tests = [
  'flake8 ~= 5.0.4',
  'pytest ~= 7.1.3',
]

[project.urls]
"Homepage" = "https://github.com/qianxyz/yeetcode"

[tool.black]
line-length = 79