[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yeetcode"
version = "0.1.1"
authors = [
  { name="Qianxy", email="xyqian67@gmail.com" },
]
description = "Make your own leetcode problems"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
dependencies = [
  'PyYAML ~= 6.0',
  'black ~= 22.10.0',
]

[project.optional-dependencies]
tests = [
  'flake8 ~= 5.0.4',
  'pytest ~= 7.1.3',
]

[project.urls]
"Homepage" = "https://github.com/qianxyz/yeetcode"
"Bug Tracker" = "https://github.com/qianxyz/yeetcode/issues"

[project.scripts]
yeetcode = "yeetcode:main"

[tool.black]
line-length = 79
